# tci

./: '  .dockerignore  .gitignore  CMakeLists.txt  CNAME  CODE_ORGANIZATION.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  entry.6808e868.css  entry.a70f67c3.js  heroku.yml  index.html  next.config.js  package.json  tci_bg.0a33817b.wasm  tsconfig.json  web-vitals.eace037c.js  webpack.config.js  worker.f074e1d5.js
.cargo/: config.toml
.github/workflows/: main.yml
clib/header/: stdarg.h  string.h
clib/impl/: stdio.h  string.h
clib/test/: assign.c.out  bitwise_operators.c.out  recursive_struct.c
codespan-reporting/src/: files.rs
compiler/: Cargo.toml
compiler-tests/: Cargo.toml  build.rs
compiler-tests/integration/: variable.c
compiler-tests/integration/arrays/: arrays.c
compiler-tests/integration/old/: exit.c
compiler-tests/lexer/: dotdot.c  simple.c
compiler-tests/parser/lexer/: dotdot.c  simple.c
compiler-tests/parser/parse/: declarators.c
compiler-tests/pass/: declaration.c  func.c
compiler-tests/src/: main.rs
compiler-web/: Cargo.toml
compiler-web/src/: lib.rs
compiler/header/: errno.h  limits.h
compiler/libc/: ctype.c
compiler/src/: ast.rs  error.rs  filedb.rs  format.rs  lexer.rs  lib.rs  macros.rs  parser.rs  walrus_codegen.rs
compiler/src/parser/: lexer.rs  macros.rs  mod.rs  parser.rs
compiler/src/pass/: ast_structure.rs  block_cuts.rs  cut_blocks.rs  declaration_scopes.rs  declaration_types.rs  declarations.rs  expr_types.rs  mod.rs  old_declaration_types.rs  types.rs
compiler/src/stdlib/: files.c  printf.c
compiler/src/stdlib/header/: stdarg.h
compiler/src/tests/: mod.rs
compiler/src/tests/integration/dyn_array_ptr/: dyn_array_ptr.h
compiler/src/tests/lexer/: include.c  mod.rs
components/: Ast.tsx  Editor.js  NavBar.js  ScrollWindow.module.css  ScrollWindow.tsx  Terminal.js  compiler.schema.ts  compiler.worker.ts  hooks.ts  lodash.tsx
csrc/: ast.h  debug_allocator.c  debug_allocator.h  hashtable.c  lexer.h  parser_1.h  type_checking_1.h  util.h
embedded-websocket/: Cargo.toml
embedded-websocket/src/: http.rs  lib.rs
frontend/: .eslintrc.json  .gitignore  package-lock.json  package.json  postcss.config.js
frontend/public/: index.html
frontend/src/: App.css  App.js  App.test.js  index.css  index.js  reducers.js  tailwind.config.js
includes/: stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  tci.h
js/: App.jsx  entry.jsx  index.html  reducers.js  styles.css  worker.js
js/components/: Editor.jsx  NavBar.js  NavBar.jsx  Terminal.jsx
lib/codespan-reporting/: Cargo.toml
lib/header/: errno.h  float.h  inttypes.h  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  tci.h
lib/impl/: ctype.c  errors.c  files.c  printf.c  scanf.c  sscanf.c  stdlib.c  stdlib.h  str_to_x.c  string.c  strings.c  tci.c
lib/parcel-plugin-wasm-pack/: package.json
lib/serde-repr/: Cargo.toml
lib/strum/: Cargo.toml
lib/test/: control_flow.c.out  files.c  hello_world.c  memory.c
libs/: stdio.h  tci.h  tci.h.c
old/components/: Editor.module.css  NavBar.js  NavBar.module.css  Terminal.js  Terminal.module.css
old/pages/: tci.module.css
old/src/: assembler.rs  lib.rs  wasm.rs
pages/: _app.tsx  globals.css  globals.scss  index.tsx  tci.module.css
src/: assembler.rs  ast.h  ast.rs  ast_2.rs  ast_typed.rs  block_parser.h  buckets.rs  clang.rs  commands.rs  debug_allocator.c  debug_allocator.h  dyn_array_ptr.c  error.rs  errors.h  errors.rs  filedb.rs  hashtable.h  interpreter.rs  lexer.c  lexer.h  lexer.rs  lib.rs  macros.rs  main.c  main.rs  net_io.rs  new_assembler.rs  new_ast.rs  new_parser.rs  new_tc_ast.rs  new_tc_structs.rs  new_type_checker.rs  opcodes.rs  parser.c  parser.h  parser.rs  parser_1.h  parser_1.rs  parser_2.rs  preprocessor.rs  (+12 more)
src/header/: stddef.h  stdint.h  stdio.h  stdlib.h  string.h
src/old/: assembler.rs  ast.rs  commands.rs  interpreter.rs  lexer.rs  parser.rs  preprocessor.rs  tc_ast.rs  type_checker.rs
src/runtime/: error.rs  files.rs  fs.rs  interpreter.rs  (+7 more)
static/: index.html
styles/: globals.css
tci/: Cargo.toml
tci-web/: Cargo.toml
test/: assign.c  assign_operators.c  binary_search.c  control_flow.c  control_flow.c.out  hello_world.c  hello_world2.c  includes.c  macros.c  stack_locals.c  structs.c  structs.c.out  var_redef.c
tests/: Cargo.toml  build.rs
tiny-http/: Cargo.toml
web/: .gitignore  App.js  Cargo.toml  entry.js  package.json  reducers.js  worker.js
(+94 files in other folders)
