[package]
name = "tci"
version = "0.1.0"
authors = ["Albert Liu <albertymliu@gmail.com>"]
edition = "2021"
description = "Teaching C Interpreter"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aliu = "0.1.22"
wasm-bindgen = "0.2.70"
js-sys = "0.3.46"
wasm-bindgen-futures = "0.4.19"
wee_alloc = "0.4.5"
lazy_static = "1.4.0"
unicode-width = "0.1.7"
soa_derive = "0.12.0"
codespan-reporting = "0.11.1"
serde = { version = "1.0.59", features = ["derive"] }
serde_json = "1.0.59"
serde_repr = "0.1.7"

[dev-dependencies]
ntest = "0.9.0"

[profile.dev]
opt-level = 1 

[profile.release]
opt-level = "z"
lto = true
