[package]
name = "compiler-tests"
version = "0.0.1"
description = "test cases for the compiler"

[lib]
doctest = false

[[bin]]
name = "run-test"
test = false
doctest = false

[dependencies]
# Until 0.13.0 is released, gotta use the github version to get sorting and ToOwned 
soa_derive = { git = "https://github.com/lumol-org/soa-derive" }
compiler = { path = "../compiler" }
codespan-reporting = "0.11.1"
clap = { version = "4.2.4", features = ["derive"] }

[dev-dependencies]
ntest = "0.9.0"

[build-dependencies]
walkdir = "2.3.3"
