[package]
name = "compiler-web"
description = "TCI compiler server for the web"
repository = "https://github.com/A1Liu/tci"
version = "0.1.0"
edition = "2021"

# Neither of these seem to be processed properly by wasm-pack, so I just disabled them. Whatever
# license-file = "../LICENSE"
# readme = "../README.md"

[lib]
crate-type = ["cdylib"]
test = false

[dependencies]
serde = "1.0.160"
serde-wasm-bindgen = "0.5.0"
compiler = { path = "../compiler" }
wasm-bindgen = "0.2.84"
wee_alloc = "0.4.5"
serde_json = "1.0.96"
