[package]
name = "compiler"
version = "0.1.0"
authors = ["Albert Liu <albertymliu@gmail.com>"]
edition = "2021"
description = "C compiler for students"
license = "MIT"

[dependencies]
lazy_static = "1.4.0"
soa_derive = "0.12.0"
codespan-reporting = "0.11.1"
serde = { version = "1.0.59", features = ["derive"] }
serde_json = "1.0.59"
clap = { version = "4.2.4", features = ["derive"] }
bitfield-struct = "0.3"
enum_derive = "0.1.7"
macro-attr = "0.2.0"
rayon = "1.7.0"

[dev-dependencies]
ntest = "0.9.0"
