[package]
name = "compiler"
version = "0.1.0"
authors = ["Albert Liu <albertymliu@gmail.com>"]
edition = "2021"
description = "C compiler for students"
license = "MIT"

[dependencies]
# Until 0.13.0 is released, gotta use the github version to get sorting and ToOwned 
soa_derive = { git = "https://github.com/lumol-org/soa-derive" }

lazy_static = "1.4.0"
codespan-reporting = "0.11.1"
serde = { version = "1.0.59", features = ["derive"] }
serde_json = "1.0.59"
bitfield-struct = "0.3"
enum_derive = "0.1.7"
macro-attr = "0.2.0"
rayon = "1.7.0"
itertools = "0.10.5"
walrus = "0.19.0"

[dev-dependencies]
ntest = "0.9.0"
